Update sonar.yml for Azure Pipelines

--- a/sonar.yml
+++ b/sonar.yml
@@ -1,17 +1,18 @@
+
+
 pool:
   name: 'Default'
-  
+
 variables:
-  # Define SonarCloud service connection and project details
-  # The SONAR_TOKEN should be a secret variable in your Azure DevOps pipeline settings
-  - name: sonarCloudServiceConnection
-    value: 'Sonar Cloud' # Your SonarCloud service connection name in Azure DevOps
-  - name: sonarProjectKey
-    value: 'ZabariServer_FrizNaKlik'
-  - name: sonarOrganization
-    value: 'zabariserver'
-  - name: buildWrapperTarget
-    value: 'build_wrapper_output_directory' # Directory for the build wrapper output
+  sonarCloudServiceConnection: 'Sonar Cloud' # Your SonarCloud service connection name
+  sonarProjectKey: 'ZabariServer_FrizNaKlik'
+  sonarOrganization: 'zabariserver'
+  SONAR_TOKEN: 'f95e70c7cace62e7f44033e13ae463ce1ca52316' # Define as a secret in pipeline variables for security
+  # Instead, define SONAR_TOKEN as a secret variable in your Azure DevOps pipeline UI settings.
+  # The SonarCloud tasks will automatically pick it up if named SONAR_TOKEN.
+  # If you must define it here and it's not a secret variable in UI, it would be:
+  SONAR_TOKEN_PLAINTEXT: 'f95e70c7cace62e7f44033e13ae463ce1ca52316'
+  # And then ensure SonarCloudPrepare's env mapping uses it, though it's best to use the standard SONAR_TOKEN secret.
 
 stages:
 - stage: BuildAndAnalyze
@@ -20,57 +21,42 @@ stages:
   - job: SonarCloudAnalysis
     displayName: 'Run SonarCloud Analysis'
     steps:
-    - task: NodeTool@0 # Installs Node.js, adjust version if needed
-      inputs:
-        versionSpec: '20.x' # Or your project's Node.js version
-      displayName: 'Install Node.js'
 
     - script: |
-        npm install -g pnpm # Install pnpm globally if not already on the agent
+        npm install -g pnpm
         pnpm install --frozen-lockfile
       displayName: 'Install Dependencies (pnpm)'
-      workingDirectory: '$(Build.SourcesDirectory)' # Or your project root if different
+      workingDirectory: '$(Build.SourcesDirectory)'
 
-    - task: SonarCloudPrepare@2 # Prepare SonarCloud analysis configuration
+    - task: SonarCloudPrepare@2
+      displayName: 'Prepare SonarCloud Analysis'
       inputs:
         SonarCloud: '$(sonarCloudServiceConnection)'
         organization: '$(sonarOrganization)'
         scannerMode: 'CLI'
         projectKey: '$(sonarProjectKey)'
-        projectName: '$(sonarProjectKey)' # Usually same as projectKey
+        projectName: '$(sonarProjectKey)'
+        # Ensure SONAR_TOKEN is available as an environment variable for this task
+        # If you've set it as a secret variable named SONAR_TOKEN in the pipeline UI,
+        # it should be automatically available.
+        # If you used SONAR_TOKEN_PLAINTEXT above (not recommended), you might need:
+        # env:
+        #   SONAR_TOKEN: $(SONAR_TOKEN_PLAINTEXT)
         # extraProperties: |
-        #   # Additional SonarCloud properties can be added here, for example:
         #   sonar.sources=src
-        #   sonar.exclusions=**/__tests__/**,**/*.test.tsx,**/*.spec.tsx
         #   sonar.typescript.tsconfigPath=tsconfig.json
-        #   # sonar.javascript.lcov.reportPaths=$(Build.SourcesDirectory)/coverage/lcov.info # If you have test coverage
-      displayName: 'Prepare SonarCloud Analysis'
 
-    # If your project requires a build step that SonarCloud needs to wrap (e.g., for C#, C++, Java, etc.)
-    # you would typically use the SonarCloud build wrapper here.
-    # For JavaScript/TypeScript projects, a direct scan after linting/tests is often sufficient.
-    # If a build wrapper is needed for your specific JS/TS setup (e.g. with specific transpilers):
-    # - script: |
-    #     build-wrapper-linux-x86-64 --out-dir $(buildWrapperTarget) pnpm build
-    #   displayName: 'Build with SonarCloud Build Wrapper'
-    #   workingDirectory: '$(Build.SourcesDirectory)'
-    # Else, for typical JS/TS projects, a build might not be wrapped, or it's part of the `sonar.sources`
-    # The `sonar.typescript.tsconfigPath` property usually helps SonarCloud understand the project structure.
-
-    # Optional: Run tests and generate coverage reports if you want SonarCloud to pick them up
-    # - script: |
-    #     pnpm test --coverage
-    #   displayName: 'Run Tests and Generate Coverage'
-    #   workingDirectory: '$(Build.SourcesDirectory)'
-    #   continueOnError: true # Allow analysis even if tests fail (optional)
+    - script: |
+        pnpm build
+      displayName: 'Build Project'
+      workingDirectory: '$(Build.SourcesDirectory)'
+      condition: succeeded()
 
     - task: SonarCloudAnalyze@2
       displayName: 'Run SonarCloud Analysis'
-      # If using build wrapper, add:
-      # env:
-      #   SONAR_SCANNER_OPTS: "-Dsonar.cfamily.build-wrapper-output=$(buildWrapperTarget)"
+      # SONAR_TOKEN should be available from the prepare step or pipeline secret variables
 
     - task: SonarCloudPublish@2
       displayName: 'Publish SonarCloud Quality Gate Result'
       inputs:
-        pollingTimeoutSec: '300' # Timeout for waiting for the analysis to complete
+        pollingTimeoutSec: '300'
